# jumpcutter

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yaml
scripts/: setup-ffmpeg.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ffmpeg.rs  lib.rs  main.rs  types.rs
src/lib/: types.ts
src/lib/components/: DetectionSettings.svelte  FileInput.svelte  LogPanel.svelte  PresetSelector.svelte  ProcessingSettings.svelte  Stats.svelte  Waveform.svelte
