[package]
name = "jumpcutter"
version = "2.0.0"
description = "Automatically remove silent parts from videos"
authors = ["Umut Keltek"]
license = "MIT"
edition = "2021"

[lib]
name = "jumpcutter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "macros"] }
regex = "1"
base64 = "0.22"
